codesnippet text wrapping fix on safari

--- a/app/assets/stylesheets/syntax.scss
+++ b/app/assets/stylesheets/syntax.scss
@@ -22,6 +22,7 @@ div.highlight {
   white-space: pre;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+  overflow-wrap: initial;
 
   code {
     font-size: 100%;
